Added the Confirmation page

--- a/src/components/LoginPage/login.scss
+++ b/src/components/LoginPage/login.scss
@@ -3,6 +3,10 @@
         justify-content: center;
         .form-wrapper {
             margin-top: 200px;
+            border: 1px solid white;
+            background: white;
+            padding: 15px;
+            box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2);
             .input-button-wrapper {
                 padding: 20px;
                 text-align: center;
