Wired the form in checkout section and added the register page

--- a/src/components/ReusableComponents/ProductCard/productCard.scss
+++ b/src/components/ReusableComponents/ProductCard/productCard.scss
@@ -10,7 +10,7 @@
         background-color: white;
         /* align-self: center; */
         padding: 57px;
-        border-radius: 10px;
+        // border-radius: 10px;
         cursor: pointer;
     }
     .image-name {
