--- a/src/components/LoginPage/login.scss
+++ b/src/components/LoginPage/login.scss
@@ -7,6 +7,12 @@
             background: white;
             padding: 15px;
             box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2);
+            .sign-in-label {
+                padding: 20px;
+                text-align: center;
+                font-size: 40px;
+                font-weight: 800;
+            }
             .input-button-wrapper {
                 padding: 20px;
                 text-align: center;
