--- a/src/components/Nav/nav.scss
+++ b/src/components/Nav/nav.scss
@@ -3,13 +3,13 @@
     justify-content: space-between;
     
     background: #2e2e2e;
-    
+    padding-left: 22px;
+    padding-right: 40px;
     
     .Brand {
-        padding: 25px;
-    
+        padding: 30px;
         font-family: Montserrat;
-        font-size: 24px;
+        font-size: 27px;
         font-weight: 800;
         font-style: normal;
         font-stretch: normal;
@@ -17,7 +17,7 @@
         letter-spacing: 4px;
         color: #f62f5e;
     }
-    .links-container {
+    .links-main-container {
         display: flex;
         align-items: center;
         .links {
@@ -25,7 +25,7 @@
             padding: 25px;
             
             font-family: Montserrat;
-            font-size: 15px;
+            font-size: 17px;            
             font-weight: bold;
             font-style: normal;
            
