--- a/src/components/Products/product.scss
+++ b/src/components/Products/product.scss
@@ -12,3 +12,14 @@
         
     }
 }
+
+.search-box-wrapper {
+    padding: 25px;
+    .search-box{
+        
+        border-radius: 20px;
+        border: none;
+        padding: 10px;
+        width: 25em;
+    }
+}
